# adetailer-ultimate

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  install.py  preload.py  pyproject.toml  style.css
.github/workflows/: pypi.yml  stale.yml  test.yml
aaaaaa/: helper.py  ui.py
adetailer/: __version__.py  args.py  classes.py  common.py  presets.py  ultralytics.py
javascript/: button-tooltips.js  localize_emoji_buttons.js
localizations/: de_DE.json  es_ES.json  fr_FR.json  it_IT.json  ja_JP.json  ko_KR.json  pl_PL.json  pt_BR.json  ru_RU.json  zh_CN.json
scripts/: !adetailer.py
tests/: test_ultralytics.py
